# signal-upgrade

./: ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix  skills.md
examples/: canonical.nota
schema/: lib.asschema  lib.schema  signal-upgrade.concept.schema
src/: lib.rs
src/schema/: lib.rs
tests/: dependency_boundary.rs  generated_schema.rs  round_trip.rs
