[package]
name         = "signal-upgrade"
version      = "0.2.1"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-upgrade"
description  = "Signal contract for the ordinary upgrade surface."
publish      = false

[lib]
name = "signal_upgrade"
path = "src/lib.rs"

[features]
default = []
nota-text = ["dep:nota-next"]

[dependencies]
nota-next        = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main", optional = true }
nota-codec        = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
rkyv              = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame      = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
thiserror         = "2"
version-projection = { git = "https://github.com/LiGoldragon/version-projection.git", branch = "main" }

[build-dependencies]
schema-next = { git = "https://github.com/LiGoldragon/schema-next.git", branch = "main" }
schema-rust-next = { git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
